--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -25,9 +25,9 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
       <item>
-       <widget class="QPlainTextEdit" name="plainTextEdit"/>
+       <widget class="QTextEdit" name="textEdit"/>
       </item>
       <item>
        <widget class="QWidget" name="SPELL_WIDGET" native="true">
